# vision_clases

./: CMakeLists.txt  nonfree_01_surf.cpp  pr01_read.cpp  pr02_crop.cpp  pr03_sum.cpp  pr04_wsum.cpp  pr05_histogram.cpp  pr06_linear_filtering.cpp  pr07_sobel.cpp  pr08_canny.cpp  pr09_thresholding.cpp  pr10_harris.cpp  pr11_orb.cpp
